WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248302
Fix date-time inputs in vertical writing mode and enable all text-based inputs
https://bugs.webkit.org/show_bug.cgi?id=248302
Summary
Fix date-time inputs in vertical writing mode and enable all text-based inputs
Tim Nguyen (:ntim)
Reported
2022-11-24 00:54:21 PST
The changes mostly involve using logical sizing in the inner elements, but it looks works pretty well otherwise.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-24 01:45:32 PST
<
rdar://problem/102642911
>
Tim Nguyen (:ntim)
Comment 2
2022-11-24 01:57:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6782
Tim Nguyen (:ntim)
Comment 3
2022-11-24 02:00:46 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/37140
EWS
Comment 4
2022-11-24 12:36:31 PST
Committed
256995@main
(40359210a8f9): <
https://commits.webkit.org/256995@main
> Reviewed commits have been landed. Closing PR #6782 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug