Fix date-time inputs in vertical writing mode and enable all text-based inputs https://bugs.webkit.org/show_bug.cgi?id=248302 rdar://102642911

Reviewed by Antti Koivisto.

Text-based inputs in vertical writing mode are mainly a rotated version of the horizontal one.
However, inner elements of date-time inputs were setting a min-width, which wrongly increased the opposite dimension in vertical writing mode making it inconsistent with the height in horizontal mode.
Fix this by setting the min-inline-size (consistent with CSS terminology), which is writing-mode aware.

Also enable vertical text-based inputs behind the VerticalFormControlsEnabled flag, they are working mostly fine aside from these issues, which will be addressed later:
- positioning bugs in inputs with decorations (search, number, autofill, etc.)
- native search input (not unstyled) is not rendered properly
- text input border should be rendered rotated

* LayoutTests/fast/css/text-overflow-ellipsis-and-floating-input-hittest.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/flex-item-compressible-002-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/text-input-block-size.optional-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/text-input-block-size.optional.html: Added.
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/css/css-writing-modes/forms/progress-appearance-native-computed-style.optional-expected.txt: Added.
* Source/WebCore/css/horizontalFormControls.css:
(@namespace "http://www.w3.org/1999/xhtml";):
* Source/WebCore/css/html.css:
(select, button, meter, progress, input:is([type="button"], [type="submit"], [type="reset"], [type="file"])):
(input:not([type="color"]), select, button, meter, progress): Deleted.
* Source/WebCore/html/shadow/DateTimeFieldElement.cpp:
(WebCore::DateTimeFieldElement::resolveCustomStyle):
* Source/WebCore/html/shadow/DateTimeFieldElement.h:
* Source/WebCore/html/shadow/DateTimeNumericFieldElement.cpp:
(WebCore::DateTimeNumericFieldElement::adjustMinInlineSize const):
(WebCore::DateTimeNumericFieldElement::adjustMinWidth const): Deleted.
* Source/WebCore/html/shadow/DateTimeNumericFieldElement.h:
* Source/WebCore/html/shadow/DateTimeSymbolicFieldElement.cpp:
(WebCore::DateTimeSymbolicFieldElement::adjustMinInlineSize const):
(WebCore::DateTimeSymbolicFieldElement::adjustMinWidth const): Deleted.
* Source/WebCore/html/shadow/DateTimeSymbolicFieldElement.h:

Canonical link: https://commits.webkit.org/256995@main